[package]
name = "silksurf-render"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
publish = false

[dependencies]
silksurf-css = { path = "../silksurf-css" }
silksurf-dom = { path = "../silksurf-dom" }
silksurf-layout = { path = "../silksurf-layout" }
rustc-hash = { workspace = true }
rayon = { workspace = true, optional = true }
tiny-skia = { workspace = true }
silksurf-text = { path = "../silksurf-text" }

[features]
default = []
parallel = ["rayon"]
batched-raster = []
[dev-dependencies]
silksurf-core = { path = "../silksurf-core" }

[lints]
workspace = true
