[package]
name = "silksurf-tls"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
publish = false

[dependencies]
rustls = { workspace = true }
rustls-native-certs = "0.8"
rustls-platform-verifier = { version = "0.6.2", optional = true }
silksurf-core = { path = "../silksurf-core" }
webpki-roots = "1.0"

[features]
platform-verifier = ["dep:rustls-platform-verifier"]

# silksurf-tls/src/bin/tls_probe.rs is the older 100-line diagnostic kept
# for in-crate smoke testing; silksurf-app/src/bin/tls_probe.rs (982 lines)
# is the canonical user-facing tls-probe binary with DANE diagnostic.
# The two share a name; documenting both with `cargo doc` collides because
# they emit to the same path. Suppress doc generation here until the
# consolidation task lands (tracked in the SNAZZY-WAFFLE roadmap).
[[bin]]
name = "tls_probe"
path = "src/bin/tls_probe.rs"
doc = false
