[package]
name = "silksurf-tls"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
publish = false

[dependencies]
rustls = { workspace = true }
rustls-native-certs = "0.8"
rustls-platform-verifier = { version = "0.6.2", optional = true }
silksurf-core = { path = "../silksurf-core" }
webpki-roots = "1.0"

[features]
platform-verifier = ["dep:rustls-platform-verifier"]

[lints]
workspace = true
